Fix window z-index bug

--- a/assets/css/templates/layouts/document.sass
+++ b/assets/css/templates/layouts/document.sass
@@ -15,7 +15,7 @@ html
       @apply pt-[150px] pb-[20px]
 
     header, main, footer
-      @apply w-full flex flex-col items-center relative overflow-x-clip
+      @apply w-full flex flex-col items-center relative
 
       section
         @apply min-h-full flex flex-col relative z-[300]
