--- a/assets/css/templates/layouts/homepage.sass
+++ b/assets/css/templates/layouts/homepage.sass
@@ -30,6 +30,8 @@ html[layout=homepage]
         @apply font-normal text-pretty leading-[1.5]
       section p a
         @apply text-[var(--color-primary)]
+      section
+        @apply z-[90]
 
       section.socials
         @apply mt-[20px] mb-[80px] flex
@@ -107,7 +109,7 @@ html[layout=homepage]
     main
 
       section.intro
-        @apply pt-[50px] pb-[400px] z-[90]
+        @apply pt-[50px] pb-[400px]
       section.intro p
         @apply w-[575px] my-[30px] text-[40px] text-balance
 
